client/src/css/home.scss
@import './app.scss';

%home-flex-row {
  display: flex;
}

%home-flex-column {
  display: flex;
  flex-direction: column;
}

%home-flex-center {
  justify-content: center;
  align-items: center;
}

.home {
  @extend %home-flex-column;
  min-height: 100vh;
  background: #2c385e;
  overflow: hidden;
  width: 100%;
}

.home-search-container {
  display: flex;
  flex-direction: column;
  background: linear-gradient(rgba(44, 56, 94, 0), $primary 85.4%),
    url('../img/video-search-background-1920w.jpg');
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  margin-bottom: 35px;
}

.home-search {
  align-self: center;
  @extend %home-flex-column;
  justify-content: flex-end;
  width: 100%;
  max-width: 1920px;
  height: 300px;

  &__no-results {
    color: white;
    opacity: 0;
    margin: 0px 25px;
    font-style: italic;
    font-size: 14px;
    transition: opacity .5s;
  }
}

.search {
  @extend %home-flex-row;
  padding: 0px 25px;
  width: 100%;
  height: 45px;
  position: relative;
  margin-bottom: 12px;

  &__input {
    flex: 1 1 auto;
    padding: 0px 33px 10px 0px;
    font-size: 20px;
    color: white;
    background: transparent;
    border: none;
    border-bottom: 2px solid white;
    outline: none;
    border-radius: 0px;
  }

  &__input::placeholder {
    color: white;
    font-weight: 700;
    opacity: 1;
  }

  &__input::-ms-input-placeholder {
    color: white;
    font-weight: 700;
  }

  &__btn {
    position: absolute;
    top: 7px;
    right: 25px;
    background: transparent;
    border: none;
  }
}

.search-result {
  @extend %home-flex-column;
  align-self: center;
  flex: 1;
  width: 90%;
  max-width: $max-content-width;
  color: white;
}

.search-default {
  @extend %home-flex-column, %home-flex-center;
  flex: 1;
  &__img {
    width: 100px;
    margin-bottom: 25px;
  }
}

@include medium-display {
  .home-search {
    &__no-results {
      font-size: 16px;
    }
  }
  .search-default {
    &__img {
      width: 120px;
    }
    &__message {
      font-size: 18px;
    }
  }
}

@include large-display {
  .home-search {
    height: 450px;
  }

  .search {
    &__input {
      flex: 1 1 auto;
      padding: 0px 33px 10px 0px;
      font-size: 30px;
    }

    &__btn-img {
      width: 25px;
    }
  }
}

